=== Opus Primus changelog.txt ===
Last revised March 1, 2013
Please note, the Opus Primus copyright can be found at the end of this file.

== Version 1.0.4 ==
* Released ...

= Code =
* Added 'Breadcrumbs' class
* Moved `breadcrumbs` method from 'Structures' class to 'Breadcrumbs' class
* Removed `hgroup` container from 'opus-primus-header'

/** ------------------------------------------------------------------------- */
== Version 1.0.3 ==
* Released February 2013

= Code =
* Changed the MetaBoxes class to TagLines
* Moved TagLines into its own Stanza as another example of the theme extensibility
* Added `breadcrumbs` method to Structures as a precursor to new features in version 1.1

/** ------------------------------------------------------------------------- */
== Version 1.0.2 ==
* Released February 2013

= Code =
* Fix 'search' template bug when a page is returned in the results

= CSS =
* Start "BNS Plugin Integrations" (aka BPI) - BNS Inline Asides

/** ------------------------------------------------------------------------- */
== Version 1.0.1 ==
* Released February 2013

= Code =
* Added 'opus_footer_after' action hook
* Change classes in '404.php' from using underscores to using hyphens
* Created new methods `the_loop_wrapped` and `the_loop_archives_wrapped`
* Modified action hooks to more semantic naming convention: `opus_<section>_<placement>`
* Moved 'opus_body_bottom' action hook to immediately before closing body tag
* Replaced `the_loop` method and surrounding code with `the_loop_wrapped`
* Replaced `the_loop_archives` method and surrounding code with `the_loop_archives_wrapped`
* Wrapped 'opus_modified_post_after' action hook in conditional making it consistent with 'opus_modified_post_before'

= CSS =
* Center top level menu items only - better aesthetics with short page titles
* Added `clear: both;` to 'img.aligncenter, img.center' to address Firefox issue when when a Featured Image and a large in post image are too close together.
